@@ -6,16 +6,18 @@
   <package id="SAEA.Common" version="6.1.3.1" targetFramework="net48" />
   <package id="SAEA.Sockets" version="6.1.3.1" targetFramework="net48" />
   <package id="SAEA.WebSocket" version="6.1.3.1" targetFramework="net48" />
+  <package id="SharpCompress" version="0.28.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="WebSocketSharpFork" version="1.0.4.0" targetFramework="net48" />
 </packages>
